# clm

./: CMakeLists.txt  README.md
source/: DrawFace.cpp  OpenCV_CLM.cpp  ReadMe.txt  StdAfx.cpp  StdAfx.h
source/CLM_Lib/: CLM.h  CLM_LoadModel.cpp  CLM_MakeInitial.cpp  CLM_Optimize.cpp  CLM_Search.cpp  CLM_SvmSearch.cpp  CLM_Utils.cpp  CLM_priv.h
source/QuadProg++/: QuadProg++.cc  QuadProg++.hh  QuadProg_136.cc  QuadProg_136.hh  QuadProg_3.cc
source/tinyxml/: tinystr.cpp  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp  xmltest.cpp_
